samples/_failures_safe/1761091309_093b86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fdaf746.c:123:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  123 | int main
      | ^~~
